:bug: Remove overflow hiding the dropdown and redundant CSS cruft

--- a/src/internal-packages/indexes/styles/create-index-modal.less
+++ b/src/internal-packages/indexes/styles/create-index-modal.less
@@ -37,17 +37,10 @@
         box-shadow: 0 2px 6px 0 rgba(239,76,76,0.30);
       }
 
-      .Select-menu-outer {
-        // Avoids the dropdown being cut off/hidden/somewhere else inside modal
-        position: inherit;
-      }
-
       &-dropdown-name {
         width: 260px;
         text-align: left;
         text-transform: none;
-        overflow: hidden;
-        text-overflow: ellipsis;
         padding-right: 10px;
         white-space: nowrap;
       }
